bump project version to 2.0.3, enable MVG plugin, and configure custom repositories and compiler settings